install twin.macro

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "platinum-fuse-web-app",
   "version": "0.1.0",
   "private": true,
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +14,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
     "@types/node": "latest",
+    "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "latest",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0",
+    "typescript": "latest"
   }
 }
